update profile img

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         </div>
         <div class="home-img">
           <div class="img-box">
-            <img src="img/profile-img.png" alt="profile-img">
+            <img src="img/profile-img.jpg" alt="profile-img">
           </div>
         </div>
       </div>
@@ -158,7 +158,7 @@
           <div class="skill-item">JavaScript basics</div>
           <div class="skill-item">GIT</div>
           <div class="skill-item">Linux</div>
-          <div class="skill-item">Windows administration</div>
+          <div class="skill-item">Windows troubleshooting</div>
           <div class="skill-item">Aloha POS software</div>
           <p>The list of my skills is still work in progress. So far I've managed to grasp <i>basics</i> of various skills related to Web development: NodeJS, NPM, Wordpress, Gatsby SSG, SEO optimization, Hosting a Website, Setting up a domain ...</p>
         </div>
