removed cv link from home
removed cv link

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
         </div>
 
         <!-- Experience Section End -->
-        <a href="dubravkocv2022.zip" class="btn" target="_blank">download cv</a>
+        <a href="#" class="btn" target="_blank">download cv</a>
         <a href="#contact" class="btn link-item">contact me</a>
 
       </div>
