updated projects section

--- a/index.html
+++ b/index.html
@@ -299,11 +299,11 @@
                           <button type="button" class="btn view-project-btn">view project</button>
                       <div class="portfolio-item-details">
                           <div class="description">
-                              <p>This is still in a planning phase. It should be done by Mar 2022</p>
+                              <p>Just a placeholder for my future project</p>
                           </div>
                           <div class="general-info">
                               <ul>
-                                <li>Work in progress - <span>TBD(2022)</span></li>
+                                <li>Work in progress - <span>TBD</span></li>
                                 <li>Technologies used - <span>HTML, CSS, JS</span></li>
                                 <li>Role - <span>Frontend, website redesign</span></li>
                                 <li>View Live - <span><a href="#">www.google.com</a></span></li>
@@ -324,11 +324,11 @@
                     <button type="button" class="btn view-project-btn">view project</button>
                 <div class="portfolio-item-details">
                     <div class="description">
-                        <p>This is still in a planning phase. It should be done by Mar 2022</p>
+                        <p>Just a placeholder for my future project</p>
                     </div>
                     <div class="general-info">
                         <ul>
-                          <li>Work in progress - <span>TBD(2022)</span></li>
+                          <li>Work in progress - <span>TBD</span></li>
                           <li>Technologies used - <span>HTML, CSS, JS</span></li>
                           <li>Role - <span>Frontend, website redesign</span></li>
                           <li>View Live - <span><a href="#">www.google.com</a></span></li>
