--- a/index.html
+++ b/index.html
@@ -149,18 +149,16 @@
         </div>
       </div>
       <div class="about-text">
-        <p>Hello world and hello dear visitor, I'm Dubravko. Hard working, honest, reliable, dedicated and responsible member of the human species - but, hey, that's boring part and you already know that ... or do you? :) Currently, I'm fully devoted in learning Web Development, starting with HTML, CSS, JavaScript and the JAMSTACK Ecosystem. My passion lies within two areas, coding and biology.</p>
+        <p>Hello world and hello dear visitor, I'm Dubravko. Hard working, honest, reliable, dedicated and responsible member of the human species - but, hey, that's boring part and you already know that ... or do you? :) Currently, I'm fully devoted in learning Web Development, starting with HTML, CSS, JavaScript and the React Library. My passion lies within two areas, coding and biology.</p>
         <h3>skills</h3>
         <div class="skills">
           <div class="skill-item">HTML</div>
           <div class="skill-item">CSS</div>
           <div class="skill-item">Responsive design</div>
-          <div class="skill-item">JavaScript basics</div>
+          <div class="skill-item">JavaScript</div>
           <div class="skill-item">GIT</div>
-          <div class="skill-item">Linux</div>
-          <div class="skill-item">Windows troubleshooting</div>
           <div class="skill-item">Aloha POS software</div>
-          <p>The list of my skills is still work in progress. So far I've managed to grasp <i>basics</i> of various skills related to Web development: NodeJS, NPM, Wordpress, Gatsby SSG, SEO optimization, Hosting a Website, Setting up a domain ...</p>
+          <p>The list of my skills is still work in progress. So far I've managed to grasp <i>basics</i> of various skills related to Web development...</p>
         </div>
 
         <div class="about-tabs">
@@ -175,23 +173,23 @@
           <div class="timeline">
             <div class="timeline-item">
               <span class="date">2020</span>
-              <h4>Bachelor of Science <span>University of Banja Luka, Faculty of Natural Sciences and Mathematics</span></h4>
-              <p>Acquired BSc degree at Faculty of Natural Sciences and Mathematics, Biology</p>
-            </div>
-            <div class="timeline-item">
-              <span class="date">2021</span>
-              <h4>FrontEnd Development Course <span>QStation HUB</span></h4>
-              <p>Finished FrontEnd Development Course in HTML, CSS and JavaScript</p>
-            </div>
-            <div class="timeline-item">
-              <span class="date">2021</span>
-              <h4>Web Development Course <span>The Odin Project</span></h4>
-              <p>Enrolled in The Odin Project Full Stack Development course. Still in progress</p>
+              <h4>University of Banja Luka <span> Faculty of Natural Sciences and Mathematics</span></h4>
+              <p>Acquired BSc degree in Biology Education at Faculty of Natural Sciences and Mathematics</p>
             </div>
             <div class="timeline-item">
               <span class="date">2022</span>
-              <h4>100 days of Code <span>By Maximilian Schwarzmüller</span></h4>
-              <p>Enrolled in UDEMY Web Development course by Maximilian Schwarzmüller. Still in progress</p>
+              <h4>FrontEnd Development Course <span>QStation HUB</span></h4>
+              <p>Finished FrontEnd Development Course in HTML, CSS and JavaScript basics</p>
+            </div>
+            <div class="timeline-item">
+              <span class="date">2022</span>
+              <h4>JavaScript & ReactJS <span>QStation HUB</span></h4>
+              <p>Enrolled in JS & ReactJS introductory course. Still in progress</p>
+            </div>
+            <div class="timeline-item">
+              <span class="date">2021/2022</span>
+              <h4>JavaScript the Complete Guide <span>By Maximilian Schwarzmüller</span></h4>
+              <p>Enrolled in UDEMY Web Development course by Maximilian Schwarzmüller</p>
             </div>
 
           </div>
