changed profile img

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         </div>
         <div class="home-img">
           <div class="img-box">
-            <img src="img/profile-img.jpg" alt="profile-img">
+            <img src="img/profile-img.webp" alt="profile-img">
           </div>
         </div>
       </div>
