--- a/index.html
+++ b/index.html
@@ -370,6 +370,7 @@
               <div class="input-group">
                 <h2>Message</h2>
                 <textarea placeholder="Message" name="message" class="input-control" required></textarea>
+                <input type="text" name="_honey" style="display:none">
               </div>
               <div class="submit-btn">
                 <button type="submit" class="btn">Send Message</button>
