updated portfolio items

--- a/index.html
+++ b/index.html
@@ -251,9 +251,9 @@
                 </div>
                 <div class="general-info">
                   <ul>
-                    <li>Created - <span>1 Dec 2021</span></li>
-                    <li>Technologies used - <span>JAMSTACK: Stackbit Visual Editor, Gatsby SSG, React, JS, HTML, CSS</span></li>
-                    <li>Role - <span>Designed basic layout in visual editor. Due to limitations of visual editor further modifications were made in code editor, mostly to CSS, markdown and forms. In some cases I had to touch and edit some React code (e.g. to remove time and date from blog posts, to add HTML lang attribute etc.)</span></li>
+                    <li>Created - <span>Dec 2021</span></li>
+                    <li>Technologies used - <span>JAMSTACK: Stackbit Visual Editor, JS, HTML, CSS</span></li>
+                    <li>Role - <span>Designed basic layout in visual editor on a platform based on React and NextJS. Due to limitations of visual editor further modifications were made in code editor, mostly to CSS, markdown and forms since at the time my knowledge of React was none.</span></li>
                     <li>View Live - <span><a href="https://www.dentoteam.net" target="_blank">www.dentoteam.net</a></span></li>
                   </ul>
                 </div>
@@ -277,8 +277,8 @@
                     <div class="general-info">
                         <ul>
                           <li>Work in progress - <span>TBD(2022)</span></li>
-                          <li>Technologies used - <span>HTML, CSS, JS</span></li>
-                          <li>Role - <span>Frontend, website redesign</span></li>
+                          <li>Technologies used - <span>ReactJS, SCSS, MaterialUI, Sanity</span></li>
+                          <li>Role - <span>Website redesign</span></li>
                           <li>View Live - <span><a href="#">www.windoorplast.com</a></span></li>
                         </ul>
                     </div>
@@ -293,18 +293,18 @@
                       <div class="portfolio-item-thumbnail">
                           <img src="img/portfolio/3.jpg" alt="portfolio-item-thumb">
                       </div>
-                          <h3 class="portfolio-item-title">Sample project</h3>
+                          <h3 class="portfolio-item-title">Covid Statistics Project</h3>
                           <button type="button" class="btn view-project-btn">view project</button>
                       <div class="portfolio-item-details">
                           <div class="description">
-                              <p>Just a placeholder for my future project</p>
+                              <p>Project done in Vanilla JS for QStation Web Development course</p>
                           </div>
                           <div class="general-info">
                               <ul>
-                                <li>Work in progress - <span>TBD</span></li>
-                                <li>Technologies used - <span>HTML, CSS, JS</span></li>
-                                <li>Role - <span>Frontend, website redesign</span></li>
-                                <li>View Live - <span><a href="#">www.google.com</a></span></li>
+                                <li>Created - <span>June 2022</span></li>
+                                <li>Technologies used - <span>HTML, CSS, JS, ChartJS, API, Firebase</span></li>
+                                <li>Role - <span>Frontend and Backend</span></li>
+                                <li>View Live - <span><a href="https://psychonautweb.github.io/covid-stats-app/">covidstatsapp</a></span></li>
                               </ul>
                           </div>
                       </div>
