updated portfolio item and picture

--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
           <div class="skill-item">Responsive design</div>
           <div class="skill-item">JavaScript</div>
           <div class="skill-item">GIT</div>
-          <div class="skill-item">Aloha POS software</div>
-          <p>The list of my skills is still work in progress. So far I've managed to grasp <i>basics</i> of various skills related to Web development...</p>
+
+          <p>The list of my skills is still work in progress. So far I've managed to grasp <i>basics</i> of various skills related to Web development...Currently, I'm learning ReactJS library.</p>
         </div>
 
         <div class="about-tabs">
@@ -180,16 +180,12 @@
               <span class="date">2022</span>
               <h4>FrontEnd Development Course <span>QStation HUB</span></h4>
               <p>Finished FrontEnd Development Course in HTML, CSS and JavaScript basics</p>
-            </div>
-            <div class="timeline-item">
-              <span class="date">2022</span>
-              <h4>JavaScript & ReactJS <span>QStation HUB</span></h4>
-              <p>Enrolled in JS & ReactJS introductory course. Still in progress</p>
+              <p>Finished JavaScript and React introductory course</p>
             </div>
             <div class="timeline-item">
               <span class="date">2021/2022</span>
-              <h4>JavaScript the Complete Guide <span>By Maximilian Schwarzmüller</span></h4>
-              <p>Enrolled in UDEMY Web Development course by Maximilian Schwarzmüller</p>
+              <h4>Academing Udemy Courses <span>By Maximilian Schwarzmüller</span></h4>
+              <p>Enrolled in JavaScript and ReacJS courses by Maximilian</p>
             </div>
 
           </div>
@@ -204,7 +200,7 @@
             <div class="timeline-item">
               <span class="date">2017 - 2018</span>
               <h4>Tech support specialist - <span>Trizma / NCR</span></h4>
-              <p>Worked as a tech support representative for NCR, hospitality division, Aloha Point of Sale.
+              <p>Tech support representative for NCR, hospitality division, Aloha Point of Sale.
               </p>
             </div>
             <div class="timeline-item">
@@ -217,7 +213,7 @@
         </div>
 
         <!-- Experience Section End -->
-        <a href="#" class="btn" target="_blank">download cv</a>
+        <!-- <a href="#" class="btn" target="_blank">download cv</a> -->
         <a href="#contact" class="btn link-item">contact me</a>
 
       </div>
@@ -291,7 +287,7 @@
 
                     <div class="portfolio-item">
                       <div class="portfolio-item-thumbnail">
-                          <img src="img/portfolio/3.jpg" alt="portfolio-item-thumb">
+                          <img src="img/portfolio/3.webp" alt="portfolio-item-thumb">
                       </div>
                           <h3 class="portfolio-item-title">Covid Statistics Project</h3>
                           <button type="button" class="btn view-project-btn">view project</button>
