--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         </div>
       </div>
       <div class="about-text">
-        <p>Hello world and hello dear visitor, I'm Dubravko. Hard working, honest, reliable, dedicated and responsible member of the human species - but, hey, that's boring part and you already know that ... or do you? :) Currently, I'm fully devoted in learning Web Development, starting with HTML, CSS, JavaScript and the React Library. My passion lies within two areas, coding and biology.</p>
+        <p>Hello world and hello dear visitor, I'm Dubravko. Hard working, honest, reliable, dedicated and responsible member of the human species - but, hey, that's boring part and you already know that ... or do you? :) Currently, I'm fully devoted in learning Web Development, starting with HTML, CSS, JavaScript and the React Library. My passion lies within two areas, coding, and in free time I enjoy photography.</p>
         <h3>skills</h3>
         <div class="skills">
           <div class="skill-item">HTML</div>
@@ -184,7 +184,7 @@
             </div>
             <div class="timeline-item">
               <span class="date">2021/2022</span>
-              <h4>Academing Udemy Courses <span>By Maximilian Schwarzmüller</span></h4>
+              <h4>Academind Udemy Courses <span>By Maximilian Schwarzmüller</span></h4>
               <p>Enrolled in JavaScript and ReacJS courses by Maximilian</p>
             </div>
 
