--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
           <div class="skill-item">CSS</div>
           <div class="skill-item">Responsive design</div>
           <div class="skill-item">JavaScript</div>
+          <div class="skill-item">ReactJS</div>
           <div class="skill-item">GIT</div>
-          <div class="skill-item">Aloha POS software</div>
           <p>The list of my skills is still work in progress. So far I've managed to grasp <i>basics</i> of various skills related to Web development...</p>
         </div>
 
@@ -252,7 +252,7 @@
                 <div class="general-info">
                   <ul>
                     <li>Created - <span>1 Dec 2021</span></li>
-                    <li>Technologies used - <span>JAMSTACK: Stackbit Visual Editor, Gatsby SSG, React, JS, HTML, CSS</span></li>
+                    <li>Technologies used - <span>Stackbit Visual Editor, JS, HTML, CSS</span></li>
                     <li>Role - <span>Designed basic layout in visual editor. Due to limitations of visual editor further modifications were made in code editor, mostly to CSS, markdown and forms. In some cases I had to touch and edit some React code (e.g. to remove time and date from blog posts, to add HTML lang attribute etc.)</span></li>
                     <li>View Live - <span><a href="https://www.dentoteam.net" target="_blank">www.dentoteam.net</a></span></li>
                   </ul>
@@ -272,7 +272,7 @@
                     <button type="button" class="btn view-project-btn">view project</button>
                 <div class="portfolio-item-details">
                     <div class="description">
-                        <p>This is still in a planning phase. It should be done by Mar 2022</p>
+                        <p>This is still in a planning phase.</p>
                     </div>
                     <div class="general-info">
                         <ul>
@@ -293,18 +293,18 @@
                       <div class="portfolio-item-thumbnail">
                           <img src="img/portfolio/3.jpg" alt="portfolio-item-thumb">
                       </div>
-                          <h3 class="portfolio-item-title">Sample project</h3>
+                          <h3 class="portfolio-item-title">Covid19 Stats App</h3>
                           <button type="button" class="btn view-project-btn">view project</button>
                       <div class="portfolio-item-details">
                           <div class="description">
-                              <p>Just a placeholder for my future project</p>
+                              <p>Course Project that shows live statistics for Covid19 pandemics</p>
                           </div>
                           <div class="general-info">
                               <ul>
-                                <li>Work in progress - <span>TBD</span></li>
-                                <li>Technologies used - <span>HTML, CSS, JS</span></li>
-                                <li>Role - <span>Frontend, website redesign</span></li>
-                                <li>View Live - <span><a href="#">www.google.com</a></span></li>
+                                <li>Created - <span>2022</span></li>
+                                <li>Technologies used - <span>HTML, CSS, JS, REST API, Firebase, ChartJS</span></li>
+                                <li>Role - <span>Frontend/Backend</span></li>
+                                <li>View Live - <span><a href="https://psychonautweb.github.io/covid-stats-app/">https://psychonautweb.github.io/covid-stats-app/</a></span></li>
                               </ul>
                           </div>
                       </div>
